# socdom4

./: CMakeLists.txt  CmpGrp.hpp  Evo.cpp  EvoCode.cpp  EvoCode.hpp  Genotype.hpp  Individual.hpp  Phenotype.hpp  Readme.md  Utils.cpp  Utils.hpp  hdf5code.cpp  hdf5code.hpp
Data/: Run_n8v01s1p00b1d0cdmg.toml  Run_n8v01s1p00b1d0cdmg_data.tsv  Run_n8v01s1p00b1d0cdmg_run.R  Run_n8v01s1p00b1d1cdmg.toml  Run_n8v01s1p05b1d0cdmg.toml  Run_n8v01s1p05b1d1cdmg.toml  Run_n8v01s1p10b1d0cdmg.toml  Run_n8v01s1p10b1d1cdmg.toml  h5_funcs.R
